Added way to pass options to exploits from data-options html tag

--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-  <head>
-    <script data-main="js/main" src="js/require.js" type="text/javascript"></script>
-  </head>
 
-  <body>
+<html>
+<head>
+
+    <script data-main="js/main" src="js/require.js" type="text/javascript"></script>
+    <title>RouterPWN 2.0</title>
+</head>
+
+<body>
     <h1>RouterPWN</h1>
 
-    <hr />
-
-  
     <h2>3com</h2>
 
-    <h3>3com Test Exploit</h3>
-    <button class="exploit-run" data-id="3com:test">Exploit</button>
+    <h3>3com Test Exploit</h3><button class="exploit-run" data-id=
+    "3com:test">Exploit</button>
 
-    <h3>2wire Test Exploit</h3>
-    <button class="exploit-run" data-id="2wire:test1" data-options="{"ip": "192.168.1.254"}">Exploit</button>
+    <h2>2Wire</h2>
 
-
-  </body>
+    <h3>2wire Test Exploit</h3><button class="exploit-run" data-id=
+    "2wire:test" data-options="{&quot;ip&quot;:&quot;192.168.1.254&quot;}">Exploit</button>
+</body>
 </html>
