Changed buttons to a hrefs, added name_exploit data attribute

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
 
     <h2>3com</h2>
 
-    <h3>3com Test Exploit</h3><button class="exploit-run" data-id=
-    "3com:test">Exploit</button>
+    <h3>3com Test Exploit</h3><a href="javascript:void(0)" class="exploit-run" data-id=
+    "3com:1" data-exploit_name="Test">Exploit</a>
 
     <h2>2Wire</h2>
 
-    <h3>2wire Test Exploit</h3><button class="exploit-run" data-id=
-    "2wire:test" data-options="{&quot;ip&quot;:&quot;192.168.1.254&quot;}">Exploit</button>
+    <h3>2wire Test Exploit</h3>
+
+    <a href="javascript:void(0)" class="exploit-run" data-id=
+    "2wire:1" data-exploit_name="4011G &amp; 5012NV - Directory Traversal" data-options="{&quot;ip&quot;:&quot;192.168.1.254&quot;, &quot;path&quot;: &quot;/etc/passwd&quot;}">Exploit</a>
 </body>
 </html>
